--- a/WpfApp/WpfApp.csproj
+++ b/WpfApp/WpfApp.csproj
@@ -11,10 +11,14 @@
   <Import Project="..\Resources\Resources.projitems" Label="Shared" />
 
   <ItemGroup>
+    <None Remove="default-player.png" />
     <None Remove="football-pitch.jpg" />
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="default-player.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="football-pitch.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
