Add Localization project, implement localization in WpfApp
Additional:
- Cleanup and refactoring

--- a/WinFormsApp/WinFormsApp.csproj
+++ b/WinFormsApp/WinFormsApp.csproj
@@ -10,21 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Update="Resource.Designer.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resource.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Update="Resource.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resource.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <ProjectReference Include="..\Localization\Localization.csproj" />
   </ItemGroup>
 
   <Import Project="..\Resources\Resources.projitems" Label="Shared" />
